--- a/backend/clonecoding/src/main/resources/application.properties
+++ b/backend/clonecoding/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 #mariadb
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/test_db
 spring.datasource.username=root
 spring.datasource.password=1234
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.security.user.name=root
+spring.security.user.password=root
+spring.security.user.roles=ADMIN
+
