--- a/backend/clonecoding/src/main/resources/application.properties
+++ b/backend/clonecoding/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #mariadb
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test_db
+spring.datasource.url=jdbc:mariadb://localhost:3306/instagramclone_mariadb
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
