--- a/backend/clonecoding/build.gradle
+++ b/backend/clonecoding/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1RELEASE'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
