--- a/backend/clonecoding/src/main/resources/application.properties
+++ b/backend/clonecoding/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #mariadb
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/instagramclone_mariadb
+spring.datasource.url=jdbc:mariadb://localhost:3306/test_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1234
 
 
 spring.jpa.hibernate.ddl-auto=create-drop
